aws-vpc-ec2-nginx/security-group.tf
resource "aws_security_group" "nginx-sg" {
    vpc_id = aws_vpc.my_vpc.id

    # Inbound rule for HTTP (port 80)
    ingress {
        from_port   = 80
        to_port     = 80
        protocol    = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }

    # Inbound rule for SSH (port 22)
    ingress {
        from_port   = 22
        to_port     = 22
        protocol    = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }

    # Outbound rule (allows all traffic)
    egress {
        from_port   = 0
        to_port     = 0
        protocol    = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }

    tags = {
        Name = "nginx-sg"
    }
}
